# lzoArchiver

./: CMakeLists.txt  compressor.cpp  compressor.hpp  input.txt  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  utility.cpp  utility.hpp
